Fix z-index quirk for UI design

--- a/site/index.css
+++ b/site/index.css
@@ -19,6 +19,7 @@ html {
     box-shadow: 10px 10px rgba(0,0,0,0.5);
     background-color: #888888;
     overflow: hidden;
+    z-index: -1;
 }
 
 .pf-nav .pf-click {
